# wrist-text-editor

./: CMakeLists.txt  Makefile  README
src/: editor.zig  gap_buffer.zig  main.c  main.zig  main_test.zig  tui.zig
test/: main_test.zig
